# 925-cpp-exam-draft-Xale2111

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
answers/: q02_vec2.md  q04_ranges.md  q06_const.md  q08_linkage.md  q20_sfml_vertexarray.md
common/: CMakeLists.txt  counters.cpp  counters.h  gpu_buffer.cpp  gpu_buffer.h  grid.h  texture_api.cpp  texture_api.h  tile_pos.h
questions/q02_vec2/: CMakeLists.txt  _consignes.md  main.cpp  vec2.h
questions/q04_ranges/: CMakeLists.txt  _consignes.md  enemies.h  main.cpp  pipeline.h
questions/q06_const/: CMakeLists.txt  _consignes.md  catalog.h  main.cpp
questions/q08_linkage/: CMakeLists.txt  _consignes.md  main.cc  player.cc  player.h  team.cc  team.h
questions/q20_sfml_vertexarray/: CMakeLists.txt  _consignes.md  grid_vertices.cpp  grid_vertices.h  main.cpp
tests/: CMakeLists.txt  check_no_const_cast.cmake  q02_normalized_int_negative.cpp  q02_vec2_test.cpp  q04_ranges_test.cpp  q06_const_test.cpp  q08_linkage_test.cpp  q20_sfml_vertexarray_test.cpp
